# limepkg-softphone-connector

./: pyproject.toml  readme.md
.github/workflows/: ci.yml
limepkg_softphone_connector/: __init__.py
limepkg_softphone_connector/endpoints/: __init__.py  endpoint.py
tests/: conftest.py
tests/endpoints/: endpoint_test.py
